--- a/docs/howtos/Client Generation/04renaming.mdx
+++ b/docs/howtos/Client Generation/04renaming.mdx
@@ -212,7 +212,9 @@ using Azure.ClientGenerator.Core;
 <TabItem value="python" label="Python">
 
 ```python
-client.get_computed_model()
+class InputModel:
+  input_name: str = rest_field(rest_name="name", readonly=True)
+response: InputModel = client.get_computed_model(name="name")
 ```
 
 </TabItem>
