--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -48,6 +48,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@include`](./decorators.md#@Azure.ClientGenerator.Core.include)
 - [`@internal`](./decorators.md#@Azure.ClientGenerator.Core.internal)
+- [`@modelAsStruct`](./decorators.md#@Azure.ClientGenerator.Core.modelAsStruct)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
