--- a/docs/howtos/Client Generation/08methodInputs.mdx
+++ b/docs/howtos/Client Generation/08methodInputs.mdx
@@ -1104,6 +1104,7 @@ export class WidgetServiceClient {
 
 ```java
 // Model class
+@Immutable
 public final class RepairInfo implements JsonSerializable<RepairInfo> {
     public RepairInfo(String problem, String contact);
     public String getProblem();
