--- a/packages/website/versioned_docs/version-latest/howtos/Client Generation/01setup.mdx
+++ b/packages/website/versioned_docs/version-latest/howtos/Client Generation/01setup.mdx
@@ -3,9 +3,9 @@ import TabItem from "@theme/TabItem";
 
 # Setup for SDK customization
 
-This page explains how to setup customization of DPG generator if necessary.
+This page explains how to setup customization of a generator if necessary.
 
-Your `package.json` needs to contains a link to the customization library for dpg, called `typespec-client-generator-core`:
+Your `package.json` needs to contains a link to the customization library, `typespec-client-generator-core`:
 
 ```json
 {
