--- a/packages/website/versioned_docs/version-latest/howtos/Client Generation/05union.mdx
+++ b/packages/website/versioned_docs/version-latest/howtos/Client Generation/05union.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # One path for multiple input/output
 
-This page documents DPG behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
+This page documents emitter behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
 
 ## Default behaviors
 
@@ -37,11 +37,11 @@ op completions(@body input: CompletionInput): CompletionResult;
 <TabItem value="python" label="Python">
 
 ```python
-def analyze(*, mode: Literal["strict", "lenient"], image: bytes) -> AnalyzeResult:
+def analyze(image: bytes, *, mode: Literal["strict", "lenient"]) -> AnalyzeResult:
   ...
 
 class CompletionInput:
-  input: str | List[str] = rest_field(readonly=True)
+  input: Union[str, List[str]] = rest_field(readonly=True)
 
 def completions(input: CompletionInput) -> CompletionResult:
   ...
