--- a/packages/website/versioned_docs/version-latest/howtos/Client Generation/07tcgcTypes.mdx
+++ b/packages/website/versioned_docs/version-latest/howtos/Client Generation/07tcgcTypes.mdx
@@ -150,7 +150,18 @@ const sdkContext = {
                   kind: "http",
                   ...
                 }
-              }
+              },
+              examples: [
+                {
+                  kind: "http",
+                  name: "Example 1",
+                  description: "Example 1",
+                  filePath: "example1.json",
+                  rawExample: {...},
+                  parameters: [...],
+                  responses: {...}
+                }
+              ]
             },
             response: {
               kind: "method",
@@ -891,7 +902,10 @@ export interface SdkHttpOperation {
   kind: "http";
   // raw HTTP operation output from typespec/http
   __raw: HttpOperation;
+  // route path for the target operation. TypeSpec suggest to use `uriTemplate` instead as `path` will not work for complex cases like not-escaping reserved chars.
   path: string;
+  // the fully resolved URI template for the target operation as defined by [RFC 6570](https://datatracker.ietf.org/doc/html/rfc6570).
+  uriTemplate: string;
   verb: HttpVerb;
   parameters: (SdkPathParameter | SdkQueryParameter | SdkHeaderParameter)[];
   bodyParam: SdkBodyParameter;
@@ -899,6 +913,7 @@ export interface SdkHttpOperation {
   // HttpStatusCodeRange can represent either a single status code or a range.
   responses: Map<HttpStatusCodeRange, SdkHttpResponse>;
   exceptions: Map<HttpStatusCodeRange, SdkHttpResponse>;
+  examples?: SdkHttpOperationExample[];
 }
 ```
 
@@ -911,6 +926,7 @@ const sdkHttpOperation = {
     // raw HttpOperation from @typespec/http;
   },
   path: "/widgets",
+  uriTemplate: "/widgets",
   verb: "get",
   parameters: [
     {
@@ -931,7 +947,18 @@ const sdkHttpOperation = {
       kind: "http",
       ...
     }
-  }
+  },
+  examples: [
+    {
+      kind: "http",
+      name: "Example 1",
+      description: "Example 1",
+      filePath: "example1.json",
+      rawExample: {...},
+      parameters: [...],
+      responses: {...}
+    }
+  ]
 }
 ```
 
@@ -1040,13 +1067,24 @@ Currently we only support HTTP service parameters.
 This represents an HTTP query parameter.
 
 ```ts
-export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes";
+// different collection format to use to separate each value in array
+// - multi: no separator, treat each value in array as a separate query parameter
+// - csv: , as separator
+// - ssv: space as separator
+// - tsv: tab as separator
+// - pipes: | as separator
+// - simple: , as separator
+// - form: no separator, treat each value in array as a separate query parameter
+export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
   kind: "query";
+  // the collection format to use to separate each value in array of a query parameter
   collectionFormat?: CollectionFormat;
   serializedName: string;
   correspondingMethodParams: SdkModelPropertyType[];
+  // if true, send each value in array or object as a separate query parameter, default is `false`
+  explode: boolean;
 }
 ```
 
@@ -1055,7 +1093,15 @@ export interface SdkQueryParameter extends SdkModelPropertyTypeBase {
 This is an HTTP header parameter.
 
 ```ts
-export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes";
+// different collection format to use to separate each value in array
+// - multi: no separator, treat each value in array as a separate header parameter
+// - csv: , as separator
+// - ssv: space as separator
+// - tsv: tab as separator
+// - pipes: | as separator
+// - simple: , as separator
+// - form: no separator, treat each value in array as a separate header parameter
+export type CollectionFormat = "multi" | "csv" | "ssv" | "tsv" | "pipes" | "simple" | "form";
 
 export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
   kind: "header";
@@ -1070,7 +1116,17 @@ export interface SdkHeaderParameter extends SdkModelPropertyTypeBase {
 ```ts
 export interface SdkPathParameter extends SdkModelPropertyTypeBase {
   kind: "path";
-  urlEncode: boolean;
+  // when interpolating this parameter in the case of array or object, expand each value using the given style, default is `false`
+  explode: boolean;
+  // different interpolating styles for the path parameter, default is `"simple"`
+  // - simple: no separator
+  // - label: . as separator
+  // - matrix: ; as separator
+  // - fragment: # as separator
+  // - path: / as separator
+  style: "simple" | "label" | "matrix" | "fragment" | "path";
+  // when interpolating this parameter, do not encode reserved characters, default is `false`
+  allowReserved: boolean;
   serializedName: string;
   optional: false;
   correspondingMethodParams: SdkModelPropertyType[];
@@ -1431,6 +1487,317 @@ export interface SdkEndpointType {
   kind: "endpoint";
   serverUrl: string;
   templateArguments: SdkPathParameter[];
+}
+```
+
+## Example Types
+
+The example types help to model the examples that TypeSpec author defined to help user understand how to use the API.
+
+We currently only have examples based on the payload, so the examples model will bind to the SdkServiceOperation.
+
+### Operation Related Interface
+
+These types are used to represent an example of a service operation.
+
+We currently only support HTTP calls to the service.
+
+So, we have `SdkHttpoperationExample` bind to `SdkHttpOperation`, `SdkHttpParameterExample` bind to `SdkHttpParameter`, `SdkHttpResponseExample` bind to `SdkHttpResponse`, and `SdkHttpResponseHeaderExample` bind to `SdkHttpResponseHeader`.
+
+Each type will have the example value type and its cooresponding definition type.
+
+```ts
+interface SdkExampleBase {
+  kind: string;
+  name: string;
+  description: string;
+  filePath: string;
+  rawExample: any;
+}
+
+export interface SdkHttpOperationExample extends SdkExampleBase {
+  kind: "http";
+  parameters: SdkHttpParameterExample[];
+  responses: Map<number, SdkHttpResponseExample>;
+}
+
+export interface SdkHttpParameterExample {
+  parameter: SdkHttpParameter;
+  value: SdkTypeExample;
+}
+
+export interface SdkHttpResponseExample {
+  response: SdkHttpResponse;
+  headers: SdkHttpResponseHeaderExample[];
+  bodyValue?: SdkTypeExample;
+}
+
+export interface SdkHttpResponseHeaderExample {
+  header: SdkServiceResponseHeader;
+  value: SdkTypeExample;
+}
+```
+
+### SdkExampleType
+
+These types are used to represent the example value of a type. One definition types will have different example value types.
+For `SdkUnionExample`, since it is hard to determine whether the example value should belong to which union variant, we will keep the raw value and leave the work for the emitter.
+For `SdkModelExample`, we will help to map the example type to the right subtype for the discriminated type, and we will separate the additional properties value from the property value.
+But for the model with inheritance, we will not break down the type graph, just put all the example value in the child model.
+
+```ts
+export type SdkTypeExample =
+  | SdkStringExample
+  | SdkNumberExample
+  | SdkBooleanExample
+  | SdkNullExample
+  | SdkAnyExample
+  | SdkArrayExample
+  | SdkDictionaryExample
+  | SdkUnionExample
+  | SdkModelExample;
+
+export interface SdkExampleTypeBase {
+  kind: string;
+  type: SdkType;
+  value: unknown;
+}
+
+export interface SdkStringExample extends SdkExampleTypeBase {
+  kind: "string";
+  type:
+    | SdkBuiltInType
+    | SdkDateTimeType
+    | SdkDurationType
+    | SdkEnumType
+    | SdkEnumValueType
+    | SdkConstantType;
+  value: string;
+}
+
+export interface SdkNumberExample extends SdkExampleTypeBase {
+  kind: "number";
+  type:
+    | SdkBuiltInType
+    | SdkDateTimeType
+    | SdkDurationType
+    | SdkEnumType
+    | SdkEnumValueType
+    | SdkConstantType;
+  value: number;
+}
+
+export interface SdkBooleanExample extends SdkExampleTypeBase {
+  kind: "boolean";
+  type: SdkBuiltInType | SdkConstantType;
+  value: boolean;
+}
+
+export interface SdkNullExample extends SdkExampleTypeBase {
+  kind: "null";
+  type: SdkNullableType;
+  value: null;
+}
+
+export interface SdkAnyExample extends SdkExampleTypeBase {
+  kind: "any";
+  type: SdkBuiltInType;
+  value: unknown;
+}
+
+export interface SdkArrayExample extends SdkExampleTypeBase {
+  kind: "array";
+  type: SdkArrayType;
+  value: SdkTypeExample[];
+}
+
+export interface SdkDictionaryExample extends SdkExampleTypeBase {
+  kind: "dict";
+  type: SdkDictionaryType;
+  value: Record<string, SdkTypeExample>;
+}
+
+export interface SdkUnionExample extends SdkExampleTypeBase {
+  kind: "union";
+  type: SdkUnionType;
+  value: unknown;
+}
+
+export interface SdkModelExample extends SdkExampleTypeBase {
+  kind: "model";
+  type: SdkModelType;
+  value: Record<string, SdkTypeExample>;
+  additionalPropertiesValue?: Record<string, SdkTypeExample>;
+}
+```
+
+### Example
+
+```ts
+const sdkHttpOperationExample = {
+  kind: "http",
+  name: "Example 1",
+  description: "Example 1",
+  filePath: "example1.json",
+  rawExample: {
+    operationId: "Widgets_Read",
+    title: "Example 1",
+    parameters: {
+      id: "test",
+    },
+    responses: {
+      200: {
+        body: {
+          id: "test",
+          color: "red",
+          weight: 100,
+        },
+      },
+    },
+  },
+  parameters: [
+    {
+      parameter: {}, // ref to the SdkHttpParameter
+      value: {
+        kind: "string",
+        type: {}, // ref to the SdkType
+        value: "test",
+      },
+    },
+  ],
+  responses: {
+    200: {
+      response: {}, // ref to the SdkHttpResponse
+      bodyValue: {
+        kind: "model",
+        type: {}, // ref to the SdkType
+        value: {
+          id: {
+            kind: "string",
+            type: {}, // ref to the SdkType
+            value: "test",
+          },
+          color: {
+            kind: "string",
+            type: {}, // ref to the SdkType
+            value: "red",
+          },
+          weight: {
+            kind: "number",
+            type: {}, // ref to the SdkType
+            value: 100,
+          },
+        },
+      },
+    },
+  },
+};
+```
+
+### Usage
+
+```ts
+function serializeServiceOperationExample(
+  context: PythonSdkContext<SdkHttpOperation>,
+  operation: SdkHttpOperation
+): PythonSdkHttpOperationExample {
+  for (const example of operation.examples) {
+    return {
+      name: example.name,
+      filePath: example.filePath,
+      parameters: example.parameters.map((x) => ({
+        parameter: getSdkModelPropertyType(x.parameter),
+        value: serializeTypeExample(context, x.value),
+      })),
+      responses: new Map(
+        [...example.responses].map(([key, value]) => [
+          key,
+          {
+            response: serializeHttpResponse(value.response),
+            headers: value.headers.map((x) => ({
+              header: getSdkModelPropertyType(x.header),
+              value: serializeTypeExample(context, x.value),
+            })),
+            bodyValue: serializeTypeExample(context, value.bodyValue),
+          },
+        ])
+      ),
+    };
+  }
+}
+
+function serializeTypeExample(
+  context: PythonSdkContext<SdkHttpOperation>,
+  example: SdkTypeExample
+): PythonSdkTypeExample {
+  switch (example.kind) {
+    case "string":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "number":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "boolean":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "null":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "any":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "array":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+        value: example.value.map((x) => serializeTypeExample(context, x)),
+      };
+    case "dict":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+        value: Object.fromEntries(
+          Object.entries(example.value).map(([key, value]) => [
+            key,
+            serializeTypeExample(context, value),
+          ])
+        ),
+      };
+    case "union":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+      };
+    case "model":
+      return {
+        ...example,
+        type: getPythonSdkType(context, example.type),
+        value: Object.fromEntries(
+          Object.entries(example.value).map(([key, value]) => [
+            key,
+            serializeTypeExample(context, value),
+          ])
+        ),
+        additionalPropertiesValue: example.additionalPropertiesValue
+          ? Object.fromEntries(
+              Object.entries(example.additionalPropertiesValue).map(([key, value]) => [
+                key,
+                serializeTypeExample(context, value),
+              ])
+            )
+          : undefined,
+      };
+  }
 }
 ```
 
