--- a/docs/howtos/Client Generation/00howtogen.mdx
+++ b/docs/howtos/Client Generation/00howtogen.mdx
@@ -3,7 +3,7 @@ import TabItem from "@theme/TabItem";
 
 # How to generate client libraries
 
-This page outlines the steps to build a client library based on your TypeSpec specification. It provides the guide of the whole process from initial API design to the release of SDKs. please visit https://aka.ms/azsdk/dpcodegen.
+This page outlines the steps to build a client library based on your TypeSpec specification. It provides a guide for the whole process from initial API design to the release of SDKs. please visit https://aka.ms/azsdk/dpcodegen.
 
 The best documentation on how to generate can be found using those links:
 
