--- a/docs/howtos/Client Generation/00howtogen.mdx
+++ b/docs/howtos/Client Generation/00howtogen.mdx
@@ -34,7 +34,7 @@ Modify your `package.json` to include the necessary dependencies for the languag
 }
 ```
 
-To simplify the process of getting your code to emit without the need for multiple command line options, it's best to modify your `tspconfig.yaml` file.
+Always update your `tspconfig.yaml` file rather than passing options through the command line.
 
 ```yaml
 emit:
