--- a/docs/howtos/Client Generation/00howtogen.mdx
+++ b/docs/howtos/Client Generation/00howtogen.mdx
@@ -53,4 +53,4 @@ options:
     package-name: azure-service-template
 ```
 
-Several language repositories utilize the `tsp-client` tool to simplify the process of generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](<./../Generating with tsp-client/tsp_client.md>).
+Several language repositories utilize the `tsp-client` tool to simplify generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](<./../Generating with tsp-client/tsp_client.md>).
