--- a/docs/howtos/Client Generation/00howtogen.mdx
+++ b/docs/howtos/Client Generation/00howtogen.mdx
@@ -3,9 +3,9 @@ import TabItem from "@theme/TabItem";
 
 # How to generate client libraries
 
-This page documents how to build a client library from your TYPESPEC specification. For an overview of the whole process from initial API design to shipping SDKs, please visit https://aka.ms/azsdk/dpcodegen.
+This page outlines the steps to build a client library based on your TypeSpec specification. It provides a guide for the whole process from initial API design to the release of SDKs. please visit https://aka.ms/azsdk/dpcodegen.
 
-The best documentation on how to generate can found using those links:
+The best documentation on how to generate can be found using those links:
 
 - https://aka.ms/azsdk/dpcodegen/net
 - https://aka.ms/azsdk/dpcodegen/python
@@ -15,11 +15,10 @@ The best documentation on how to generate can found using those links:
 
 At a glance, add your emitter name to your `package.json`, along with the right options in the `tspconfig.yaml`.
 
-> **NOTE:** It may be complicated to generate all languages from the same folder at the moment as the emitters and TypeSpec libraries, such as `typespec-azure-core` and `typespec-resource-manager` are still in preview.
-> It's recommended that you keep each `package.json` with a unique language emitter, as they are likely to conflict, until all emitters and the TypeSpec libraries
-> reach their first stable release.
+> **NOTE:** Generating all languages from the same folder may be complicated due to the preview status of the emitters and TypeSpec libraries, such as `typespec-azure-core` and `typespec-azure-resource-manager`.
+> It is recommended to have a unique language emitter in each `package.json` to avoid conflicts until all emitters and the TypeSpec libraries reach their first stable release.
 
-Update your `package.json` to contain dependencies on the language emitter(s). Don't forget to do `npm install` after an update of the file:
+Modify your `package.json` to include the necessary dependencies for the language emitter(s). Remember to run `npm install` after making changes to the file:
 
 ```json
 {
@@ -35,7 +34,7 @@ Update your `package.json` to contain dependencies on the language emitter(s). D
 }
 ```
 
-To get your code emitting without having to pass several options on the command line, the easiest way is to update your `tspconfig.yaml` file:
+Always update your `tspconfig.yaml` file rather than passing options through the command line.
 
 ```yaml
 emit:
@@ -54,4 +53,4 @@ options:
     package-name: azure-service-template
 ```
 
-Several language repositories support the `tsp-client` tool to facilitate generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](<./../Generating with tsp-client/tsp_client.md>).
+Several language repositories utilize the `tsp-client` tool to simplify generating client libraries. For more information on the tool, see [Getting started with `tsp-client`](<./../Generating with tsp-client/tsp_client.md>).
