--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -47,6 +47,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
+- [`@paramAlias`](./decorators.md#@Azure.ClientGenerator.Core.paramAlias)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
 - [`@useSystemTextJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.useSystemTextJsonConverter)
