--- a/docs/libraries/azure-core/reference/index.mdx
+++ b/docs/libraries/azure-core/reference/index.mdx
@@ -96,6 +96,7 @@ npm install --save-peer @azure-tools/typespec-azure-core
 - [`FilterParameter`](./data-types.md#Azure.Core.FilterParameter)
 - [`FilterQueryParameter`](./data-types.md#Azure.Core.FilterQueryParameter)
 - [`MaxPageSizeQueryParameter`](./data-types.md#Azure.Core.MaxPageSizeQueryParameter)
+- [`MultiPartFile`](./data-types.md#Azure.Core.MultiPartFile)
 - [`OrderByQueryParameter`](./data-types.md#Azure.Core.OrderByQueryParameter)
 - [`Page`](./data-types.md#Azure.Core.Page)
 - [`PollingOptions`](./data-types.md#Azure.Core.PollingOptions)
