--- a/docs/libraries/azure-core/reference/index.mdx
+++ b/docs/libraries/azure-core/reference/index.mdx
@@ -93,10 +93,10 @@ npm install --save-peer @azure-tools/typespec-azure-core
 - [`EtagProperty`](./data-types.md#Azure.Core.EtagProperty)
 - [`EtagResponseEnvelope`](./data-types.md#Azure.Core.EtagResponseEnvelope)
 - [`ExpandQueryParameter`](./data-types.md#Azure.Core.ExpandQueryParameter)
+- [`FileWithRequiredMetadata`](./data-types.md#Azure.Core.FileWithRequiredMetadata)
 - [`FilterParameter`](./data-types.md#Azure.Core.FilterParameter)
 - [`FilterQueryParameter`](./data-types.md#Azure.Core.FilterQueryParameter)
 - [`MaxPageSizeQueryParameter`](./data-types.md#Azure.Core.MaxPageSizeQueryParameter)
-- [`MultiPartFile`](./data-types.md#Azure.Core.MultiPartFile)
 - [`OrderByQueryParameter`](./data-types.md#Azure.Core.OrderByQueryParameter)
 - [`Page`](./data-types.md#Azure.Core.Page)
 - [`PollingOptions`](./data-types.md#Azure.Core.PollingOptions)
