Adding missing documentation of changes

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -183,8 +183,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`LocationData`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationData)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationParameter)
 - [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationResourceParameter)
+- [`ManagedOnBehalfOfConfiguration`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedOnBehalfOfConfiguration)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentity)
 - [`ManagementGroupNameParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagementGroupNameParameter)
+- [`MoboBrokerResource`](./data-types.md#Azure.ResourceManager.CommonTypes.MoboBrokerResource)
 - [`Operation`](./data-types.md#Azure.ResourceManager.CommonTypes.Operation)
 - [`OperationDisplay`](./data-types.md#Azure.ResourceManager.CommonTypes.OperationDisplay)
 - [`OperationIdParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.OperationIdParameter)
