--- a/docs/howtos/Client Generation/12multipart.mdx
+++ b/docs/howtos/Client Generation/12multipart.mdx
@@ -5,7 +5,7 @@ import TabItem from "@theme/TabItem";
 
 This doc details what emitters will generate for multipart request.
 
-## Common multipart request 
+## Common multipart request
 
 When content-type of operation is "multipart/form-data", the body payload is multipart payload.
 
@@ -24,7 +24,10 @@ model MultipartRequest {
 }
 
 @post
-op upload(@header contentType: "multipart/form-data", @body body: MultipartRequest): NoContentResponse;
+op upload(
+  @header contentType: "multipart/form-data",
+  @body body: MultipartRequest,
+): NoContentResponse;
 ```
 
 </TabItem>
@@ -77,11 +80,10 @@ public void upload(MultipartRequest body);
 </TabItem>
 </Tabs>
 
-
 ## Multipart request with `@multipartBody`
 
-With `@multipartBody`, typespec author could define part of multipart request with more detailed info. 
-For example, typespec author could use `File` model predefined in `@typespec/http` to declare the requiredness of filename and 
+With `@multipartBody`, typespec author could define part of multipart request with more detailed info.
+For example, typespec author could use `File` model predefined in `@typespec/http` to declare the requiredness of filename and
 contentType.
 
 <Tabs>
@@ -100,7 +102,10 @@ model MultipartRequest {
 }
 
 @post
-op upload(@header contentType: "multipart/form-data", @multipartBody body: MultipartRequest): NoContentResponse;
+op upload(
+  @header contentType: "multipart/form-data",
+  @multipartBody body: MultipartRequest,
+): NoContentResponse;
 ```
 
 </TabItem>
