--- a/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -1315,7 +1315,7 @@ There is a one-to-one mapping between the TypeSpec scalar kinds and the `SdkBuil
 ```ts
 export interface SdkBuiltInType extends SdkTypeBase {
   kind: SdkBuiltInKinds;
-  encode: string;
+  encode?: string;
   name: string;
   baseType?: SdkBuiltInType;
   crossLanguageDefinitionId: string;
