--- a/.chronus/changes/almend-Rule-2024-8-17-16-58-23.md
+++ b/.chronus/changes/almend-Rule-2024-8-17-16-58-23.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-resource-manager"
 ---
 
-Add arm-properties-type-object-no-definition rule
+Add `arm-properties-type-object-no-definition` rule
