Feedback: change name and apply rule to model level

--- a/.chronus/changes/almend-Rule-2024-8-18-10-2-28.md
+++ b/.chronus/changes/almend-Rule-2024-8-18-10-2-28.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-rulesets"
 ---
 
-Add `arm-properties-type-object-no-definition` rule to ruleset
+Add `arm-no-empty-model` rule to ruleset
