Feedback: rename from arm-no-empty-model to no-empty-model

--- a/.chronus/changes/almend-Rule-2024-8-18-10-2-28.md
+++ b/.chronus/changes/almend-Rule-2024-8-18-10-2-28.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-rulesets"
 ---
 
-Add `arm-no-empty-model` rule to ruleset
+Add `no-empty-model` rule to ruleset
