--- a/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -911,8 +911,8 @@ export interface SdkHttpOperation {
   bodyParam: SdkBodyParameter;
   // mapping of status codes to SdkHttpResponse for valid responses
   // HttpStatusCodeRange can represent either a single status code or a range.
-  responses: Map<HttpStatusCodeRange, SdkHttpResponse>;
-  exceptions: Map<HttpStatusCodeRange, SdkHttpResponse>;
+  responses: SdkHttpResponse[];
+  exceptions: SdkHttpResponse[];
   examples?: SdkHttpOperationExample[];
 }
 ```
@@ -1277,6 +1277,7 @@ interface HttpStatusCodeRange {
 
 export interface SdkHttpResponse {
   kind: "http";
+  statusCodes: number | HttpStatusCodeRange | "*";
   headers: SdkServiceResponseHeader[];
   apiVersions: string[];
   type?: SdkType;
@@ -1527,7 +1528,7 @@ interface SdkExampleBase {
 export interface SdkHttpOperationExample extends SdkExampleBase {
   kind: "http";
   parameters: SdkHttpParameterExampleValue[];
-  responses: Map<number, SdkHttpResponseExampleValue>;
+  responses: SdkHttpResponseExampleValue[];
 }
 
 export interface SdkHttpParameterExampleValue {
@@ -1537,6 +1538,7 @@ export interface SdkHttpParameterExampleValue {
 
 export interface SdkHttpResponseExampleValue {
   response: SdkHttpResponse;
+  statusCode: number;
   headers: SdkHttpResponseHeaderExampleValue[];
   bodyValue?: SdkExampleValue;
 }
