--- a/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -1306,8 +1306,8 @@ interface SdkTypeBase {
 
 ### SdkBuiltInType
 
-These are the mappings from the built in scalar TypeSpec types.
-We add `encode` onto these types, telling us how to encode when sending to the service.
+A `SdkBuiltInType` represents a built-in scalar TypeSpec type or scalar type that derives from a built-in scalar TypeSpec type, but datetime and duration are not included.
+We add `encode` onto these types if `@encode` decorator exists, telling us how to encode when sending to the service.
 
 There is a one-to-one mapping between the TypeSpec scalar kinds and the `SdkBuiltInKinds`.
 
@@ -1316,12 +1316,16 @@ There is a one-to-one mapping between the TypeSpec scalar kinds and the `SdkBuil
 ```ts
 export interface SdkBuiltInType extends SdkTypeBase {
   kind: SdkBuiltInKinds;
-  encode?: string;
   name: string;
+  encode?: string;
   baseType?: SdkBuiltInType;
   crossLanguageDefinitionId: string;
 }
 ```
+
+The `crossLanguageDefinitionId` represents the fully qualified name of this type in TypeSpec language for the emitter to distinguish from the built-in TypeSpec types.
+
+For a full list of types defined in `@azure-tools/typespec-azure-core` library, please refer to its reference doc.
 
 ### SdkDateTimeType
 
