Add networksecurityperimeter and managedidentitywithdelegation common types  (#1505)
issue: https://github.com/Azure/typespec-azure/issues/1160

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -163,11 +163,15 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Models
 
+- [`AccessRule`](./data-types.md#Azure.ResourceManager.CommonTypes.AccessRule)
+- [`AccessRuleProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.AccessRuleProperties)
 - [`ApiVersionParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ApiVersionParameter)
 - [`AzureEntityResource`](./data-types.md#Azure.ResourceManager.CommonTypes.AzureEntityResource)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityRequest)
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CommonTypes.CustomerManagedKeyEncryption)
+- [`DelegatedResource`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResource)
+- [`DelegatedResources`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResources)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.CommonTypes.Encryption)
 - [`EncryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.EncryptionProperties)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorAdditionalInfo)
@@ -185,8 +189,15 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationResourceParameter)
 - [`ManagedOnBehalfOfConfiguration`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedOnBehalfOfConfiguration)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentity)
+- [`ManagedServiceIdentityWithDelegation`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentityWithDelegation)
 - [`ManagementGroupNameParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagementGroupNameParameter)
 - [`MoboBrokerResource`](./data-types.md#Azure.ResourceManager.CommonTypes.MoboBrokerResource)
+- [`NetworkSecurityPerimeter`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityPerimeter)
+- [`NetworkSecurityPerimeterConfiguration`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityPerimeterConfiguration)
+- [`NetworkSecurityPerimeterConfigurationListResult`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityPerimeterConfigurationListResult)
+- [`NetworkSecurityPerimeterConfigurationNameParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityPerimeterConfigurationNameParameter)
+- [`NetworkSecurityPerimeterConfigurationProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityPerimeterConfigurationProperties)
+- [`NetworkSecurityProfile`](./data-types.md#Azure.ResourceManager.CommonTypes.NetworkSecurityProfile)
 - [`Operation`](./data-types.md#Azure.ResourceManager.CommonTypes.Operation)
 - [`OperationDisplay`](./data-types.md#Azure.ResourceManager.CommonTypes.OperationDisplay)
 - [`OperationIdParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.OperationIdParameter)
@@ -203,8 +214,11 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`PrivateLinkResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceParameter)
 - [`PrivateLinkResourceProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceProperties)
 - [`PrivateLinkServiceConnectionState`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkServiceConnectionState)
+- [`ProvisioningIssue`](./data-types.md#Azure.ResourceManager.CommonTypes.ProvisioningIssue)
+- [`ProvisioningIssueProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.ProvisioningIssueProperties)
 - [`ProxyResource`](./data-types.md#Azure.ResourceManager.CommonTypes.ProxyResource)
 - [`Resource`](./data-types.md#Azure.ResourceManager.CommonTypes.Resource)
+- [`ResourceAssociation`](./data-types.md#Azure.ResourceManager.CommonTypes.ResourceAssociation)
 - [`ResourceGroupNameParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ResourceGroupNameParameter)
 - [`ResourceModelWithAllowedPropertySet`](./data-types.md#Azure.ResourceManager.CommonTypes.ResourceModelWithAllowedPropertySet)
 - [`ScopeParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ScopeParameter)
