feedback: refactor, documentation and nits

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -84,6 +84,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Operations
 
+- [`ArmActionAsync`](./interfaces.md#Azure.ResourceManager.ArmActionAsync)
+- [`ArmActionSync`](./interfaces.md#Azure.ResourceManager.ArmActionSync)
 - [`ArmCustomPatchAsync`](./interfaces.md#Azure.ResourceManager.ArmCustomPatchAsync)
 - [`ArmCustomPatchSync`](./interfaces.md#Azure.ResourceManager.ArmCustomPatchSync)
 - [`ArmListBySubscription`](./interfaces.md#Azure.ResourceManager.ArmListBySubscription)
