--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -87,6 +87,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmCustomPatchAsync`](./interfaces.md#Azure.ResourceManager.ArmCustomPatchAsync)
 - [`ArmCustomPatchSync`](./interfaces.md#Azure.ResourceManager.ArmCustomPatchSync)
 - [`ArmListBySubscription`](./interfaces.md#Azure.ResourceManager.ArmListBySubscription)
+- [`ArmProviderActionAsync`](./interfaces.md#Azure.ResourceManager.ArmProviderActionAsync)
+- [`ArmProviderActionSync`](./interfaces.md#Azure.ResourceManager.ArmProviderActionSync)
 - [`ArmResourceActionAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionAsync)
 - [`ArmResourceActionAsyncBase`](./interfaces.md#Azure.ResourceManager.ArmResourceActionAsyncBase)
 - [`ArmResourceActionNoContentAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionNoContentAsync)
@@ -155,7 +157,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourcePlanProperty`](./data-types.md#Azure.ResourceManager.ResourcePlanProperty)
 - [`ResourceSkuProperty`](./data-types.md#Azure.ResourceManager.ResourceSkuProperty)
 - [`ResourceUriParameter`](./data-types.md#Azure.ResourceManager.ResourceUriParameter)
+- [`SubscriptionActionScope`](./data-types.md#Azure.ResourceManager.SubscriptionActionScope)
 - [`SubscriptionLocationResource`](./data-types.md#Azure.ResourceManager.SubscriptionLocationResource)
+- [`TenantActionScope`](./data-types.md#Azure.ResourceManager.TenantActionScope)
 - [`TenantLocationResource`](./data-types.md#Azure.ResourceManager.TenantLocationResource)
 - [`TrackedResource`](./data-types.md#Azure.ResourceManager.TrackedResource)
 
