--- a/docs/release-notes/release-2024-10-09.md
+++ b/docs/release-notes/release-2024-10-09.md
@@ -32,6 +32,7 @@ This release contains deprecations and breaking changes
 - [#1512](https://github.com/Azure/typespec-azure/pull/1512) `x-ms-skip-url-encoding` should be replaced with `allowReserved`
 - [#1505](https://github.com/Azure/typespec-azure/pull/1505) Added common-types managed identity with delegation and network security perimeter
 - [#1555](https://github.com/Azure/typespec-azure/pull/1555) Add `no-empty-model` rule
+- [#1639](https://github.com/Azure/typespec-azure/pull/1639) Adding `ArmProviderActionSync` and `ArmProviderActionAsync` templates to the ARM library to perform actions at the subscription and tenant levels.
 
 ### @azure-tools/typespec-client-generator-core
 
