--- a/docs/howtos/Client Generation/06types.mdx
+++ b/docs/howtos/Client Generation/06types.mdx
@@ -910,7 +910,19 @@ This is a brief structure of the models in a discriminated set in the output of 
 </TabItem>
 <TabItem value="python" label="Python">
 
-TODO
+```python
+from .. import _model_base
+from .._model_base import rest_discriminator, rest_field
+
+class Cat(_model_base.Model):
+    kind: str = rest_discriminator(name="kind")
+
+class Siamese(Cat):
+    kind: Literal["siamese"] = rest_discriminator(name="kind")
+
+class Ragdoll(Cat):
+    kind: Literal["ragdoll"] = rest_discriminator(name="kind")
+```
 
 </TabItem>
 <TabItem value="csharp" label="CSharp" >
